--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@
   services:
     web:
       build: .
-      command: flask run --host=0.0.0.0
+      command: python3 app.py
       ports:
         - "5000:5000"
