--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 monotonic==1.5
 pylint==2.6.0
+python-dotenv==0.15.0
 python-engineio==3.9.3
 python-socketio==4.3.1
 six==1.12.0
