--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,10 @@ before_install:
   - docker run -d -p 5000:5000 johnminer/playground
   - docker ps -a
   - docker run johnminer/playground /bin/sh -c "cd /app; python3 -m unittest"
+
+install:
+  - python3 -m pip install -r requirements.txt
+
+script: 
+  - sed -i '2s/.*/LOCALDOCKER=false/' .env
+  - python3 -m unittest
